<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="show_additional_fields">Show additional fields</string>
    <string name="hide_additional_fields">Hide additional fields</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="job_title">Job title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
</resources>